--- a/PruebaDesarrollador/API REST/Prueba-REST/src/main/resources/application.yml
+++ b/PruebaDesarrollador/API REST/Prueba-REST/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
        dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: 
-    url: jdbc:mysql://localhost:3306/bdcontratos
-    username: root
+    password: 4NzD9XxsnN4PuIOHWJK8
+    url: jdbc:mysql://ux8x1at3lljrjdll:4NzD9XxsnN4PuIOHWJK8@br3nqeekgaksouxe0ttw-mysql.services.clever-cloud.com:3306/br3nqeekgaksouxe0ttw
+    username: ux8x1at3lljrjdll
 
