--- a/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/package.json
+++ b/PruebaDesarrollador/API REST/Prueba-REST-Front-end/front-rest/package.json
@@ -12,24 +12,25 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~10.1.3",
-        "@angular/common": "~10.1.3",
-        "@angular/compiler": "~10.1.3",
-        "@angular/core": "~10.1.3",
-        "@angular/forms": "~10.1.3",
-        "@angular/platform-browser": "~10.1.3",
-        "@angular/platform-browser-dynamic": "~10.1.3",
-        "@angular/router": "~10.1.3",
-        "bootstrap": "^4.5.3",
+        "@angular/animations": "~11.1.1",
+        "@angular/common": "~11.1.1",
+        "@angular/compiler": "~11.1.1",
+        "@angular/core": "~11.1.1",
+        "@angular/forms": "~11.1.1",
+        "@angular/platform-browser": "~11.1.1",
+        "@angular/platform-browser-dynamic": "~11.1.1",
+        "@angular/router": "~11.1.1",
+        "bootstrap": "^4.6.0",
         "jquery": "^3.5.1",
+        "popper.js": "^1.16.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1001.3",
-        "@angular/cli": "~10.1.3",
-        "@angular/compiler-cli": "~10.1.3",
+        "@angular-devkit/build-angular": "^0.1101.2",
+        "@angular/cli": "^11.1.2",
+        "@angular/compiler-cli": "~11.1.1",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^12.11.1",
